# Copyright (C) 2017-2019 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.


July 30, 2019: AnnotSV version 2.2.3
	- Integration of the gnomAD data in the ranking
	- AnnotSV can now create two other output files:
		- A report of unannotated variants (e.g. badly formatted SV, variant length < SVminSize...)
		- A report of the decisions that explain the ranking of each SV 

July 25, 2019: AnnotSV version 2.2.2
	- Add bugfix concerning the use of "external gene annotation files"

July 22, 2019: AnnotSV version 2.2.1
	- Add bugfix concerning the -txFile option

July 09, 2019: AnnotSV version 2.2
	- AnnotSV follows now the Filesystem Hierarchy Standard (FHS). Installation can be easily done using a Makefile
	- Include 2 new options:  "-candidateGenesFiltering" to select the SV overlapping a gene from the "candidateGenesFile" (default = no)
				  "-rankFiltering" to select the SV of a user-defined specific class (from 1 to 5), default = "1-5"
	- Users can now disable default annotation (through a configfile) provided by AnnotSV and only have user defined annotations
	- AnnotSV is now available for the Mouse genome SV annotations
	- Add the UTR/CDS's information from overlapping genes (location2 column)
	- Add bugfix concerning the use of the "-candidateGenesFile" and "-reciprocal" options
	- Add bugfix concerning the report of the SV length
	- Add bugfix concerning the report of gene-based annotation on the full lines

Apr 18, 2019: AnnotSV version 2.1
	- Include the gnomAD SV frequency annotation
	- Include the Ira M. Hall’s lab SV frequency annotations
	- Include GeneHancer annotation (an integrated compendium of human promoters, enhancers and their inferred target genes)